--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,7 +12,7 @@
                 </li>
                 <% if (user) { %>
                     <li class="nav-item">
-                        <a class="nav-link" href="/private">Dog Posts</a>
+                        <a class="nav-link" href="/post">Dog Posts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Log Out</a>
