--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
       <label>Review:</label>
       <textarea name="content"></textarea>
       <label>Rating:</label>
-      <select name="rating">
+      <select type ='number' name="rating">
         <option value="10">10</option>
         <option value="11">11</option>
         <option value="12">12</option>
