--- a/views/comments/userComment.ejs
+++ b/views/comments/userComment.ejs
@@ -25,7 +25,7 @@
                 <td> <%= post.user.name %></td>
                 <td> <%= post.rating %> out of 10</td>
                 <td> <%= post.content %> </td>
-                <td> <% if(user && user._id.equals(post.user)){ %>
+                <td> <% if(user && user._id.equals(post.user._id)){ %>
                     <a href='/post/<%=post._id%>/edit'> Edit </a>
                     <form action = '/post/<%= post._id %>?_method=DELETE' method = 'POST'>
                         <button type='submit'>X</button>
@@ -41,10 +41,10 @@
           <label>Comment:</label>
           <textarea name="commentContent"></textarea>
           <label>Rating:</label>
-          <select name="commentRating">
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
+          <select type ='number' name="commentRating">
+            <option value='10'>10</option>
+            <option value='11'>11</option>
+            <option value='12'>12</option>
             <option value="13">13</option>
             <option value="14">14</option>
             <option value="15">15</option>
@@ -61,10 +61,10 @@
             </thead>
             <% post.userComments.forEach(function(r) { %>
             <tbody>
-                <td> <%= r.commentUser %></td>
+                <td> <%= r.commentUser.name %></td>
                 <td> <%= r.commentRating %> out of 10</td>
                 <td> <%= r.commentContent %> </td>
-                <td> <% if(user && user._id.equals(post.user)){ %>
+                <td> <% if(user && user._id.equals(post.user._id)){ %>
                     <a href='/post/<%=r._id%>/comment/edit'> Edit </a>
                     <form action = '/post/<%= r._id %>/comment/?_method=DELETE' method = 'POST'>
                         <button type='submit'>X</button>
