--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,12 +2,32 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
 a {
   color: #00B7FF;
 }
-
 .randomDog {
   max-height: 400px;
   max-width: 400px;
+  padding: 10px;
+  
 }
+table {
+  font-size: 20px;
+}
+table thead th {
+  padding: 5px;
+  border-bottom: 2px solid #424748;
+}
+
+table td {
+  padding: 10px;
+  text-align: center;
+}
+
+#add-dog-post{
+  padding: 10px;
+  text-align: auto;
+}
+
+
+
