--- a/views/comments/userComment.ejs
+++ b/views/comments/userComment.ejs
@@ -25,8 +25,11 @@
                 <td> <%= post.user.name %></td>
                 <td> <%= post.rating %> out of 10</td>
                 <td> <%= post.content %> </td>
-                <td> <% if(user && user._id.equals(post.user._id)){ %>
+                <td> 
+                    <% if(user && user._id.equals(post.user._id)){ %>
                     <a href='/post/<%=post._id%>/edit'> Edit </a>
+                </td>
+                <td>
                     <form action = '/post/<%= post._id %>?_method=DELETE' method = 'POST'>
                         <button type='submit'>X</button>
                     </form>
@@ -57,15 +60,17 @@
             <thead>
                 <th> Username </th>
                 <th> User Rating </th>
-                <th> User Comment </th>
+                <th> Comment Section </th>
             </thead>
             <% post.userComments.forEach(function(r) { %>
             <tbody>
                 <td> <%= r.commentUser.name %></td>
                 <td> <%= r.commentRating %> out of 10</td>
                 <td> <%= r.commentContent %> </td>
-                <td> <% if(user && user._id.equals(post.user._id)){ %>
+                <td> <% if(user && user._id.equals(r.commentUser._id)){ %>
                     <a href='/post/<%=r._id%>/comment/edit'> Edit </a>
+                </td>
+                <td>
                     <form action = '/post/<%= r._id %>/comment/?_method=DELETE' method = 'POST'>
                         <button type='submit'>X</button>
                     </form>
