--- a/views/post.ejs
+++ b/views/post.ejs
@@ -10,8 +10,8 @@
                 <th> Good Dogs </th>
                 <th> Username </th>
                 <th> User Rating </th>
-                <th> User Comment </th>
-                <th> Post </th>
+                <th> Comment </th>
+                <th> Comment Section </th>
             </thead>
             <tbody>
                 <% photos.forEach(function(r) { %>
